--- a/ProductEngine/MediaGalaxyDownloader/MediaGalaxyDownloader.csproj
+++ b/ProductEngine/MediaGalaxyDownloader/MediaGalaxyDownloader.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MediaGalaxyDownloader.cs" />
+    <Compile Include="MediGalaxyResponseStructure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
       <Project>{F44EDBA0-B5C4-4656-B215-37632E705754}</Project>
       <Name>Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
+      <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
+      <Name>MiscUtilities</Name>
     </ProjectReference>
     <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
       <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
