removed mediagalaxy added pcgarage

--- a/ProductEngine/MediaGalaxyDownloader/PcGarageDownloader.csproj
+++ b/ProductEngine/MediaGalaxyDownloader/PcGarageDownloader.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0F42B995-BC46-4776-8048-1C8F85A885C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MediaGalaxyDownloader</RootNamespace>
-    <AssemblyName>MediaGalaxyDownloader</AssemblyName>
+    <RootNamespace>PcGarageDownloader</RootNamespace>
+    <AssemblyName>PcGarageDownloader</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.8.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libraries\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.WindowsAzure.Storage, Version=9.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libraries\Microsoft.WindowsAzure.Storage.dll</HintPath>
@@ -44,8 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MediaGalaxyDownloader.cs" />
-    <Compile Include="MediGalaxyResponseStructure.cs" />
+    <Compile Include="PcGarageDownloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
