--- a/ProductEngine/PcGarageParser/PcGarageParser.csproj
+++ b/ProductEngine/PcGarageParser/PcGarageParser.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F42B995-BC46-4776-8048-1C8F85A885C8}</ProjectGuid>
+    <ProjectGuid>{9A4E87FF-48E7-4ADE-848E-339C1359275A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PcGarageDownloader</RootNamespace>
-    <AssemblyName>PcGarageDownloader</AssemblyName>
+    <RootNamespace>PcGarageParser</RootNamespace>
+    <AssemblyName>PcGarageParser</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,14 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack, Version=1.8.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAzure.Storage, Version=9.3.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libraries\Microsoft.WindowsAzure.Storage.dll</HintPath>
-    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.8.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PcGarageDownloader.cs" />
+    <Compile Include="PcGarageProductParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -56,17 +49,9 @@
       <Project>{010D9C41-5B64-4861-B909-E42855976E9E}</Project>
       <Name>DatabaseModels</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{F44EDBA0-B5C4-4656-B215-37632E705754}</Project>
-      <Name>Interfaces</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PcGarageParser\PcGarageParser.csproj">
-      <Project>{9A4E87FF-48E7-4ADE-848E-339C1359275A}</Project>
-      <Name>PcGarageParser</Name>
     </ProjectReference>
     <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
       <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
