--- a/ProductEngine/Interfaces/Interfaces.csproj
+++ b/ProductEngine/Interfaces/Interfaces.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDownloader.cs" />
+    <Compile Include="IParseProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
