--- a/ProductEngine/CelParser/CelParser.csproj
+++ b/ProductEngine/CelParser/CelParser.csproj
@@ -49,6 +49,10 @@
       <Project>{010D9C41-5B64-4861-B909-E42855976E9E}</Project>
       <Name>DatabaseModels</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{F44EDBA0-B5C4-4656-B215-37632E705754}</Project>
+      <Name>Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
