--- a/ProductEngine/CrawlingUtilities/CrawlingUtilities.csproj
+++ b/ProductEngine/CrawlingUtilities/CrawlingUtilities.csproj
@@ -44,16 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CrawlDownloader.cs" />
     <Compile Include="CrawlManager.cs" />
     <Compile Include="CrawlProductParser.cs" />
     <Compile Include="MainCrawlStarter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CelParser\CelParser.csproj">
+      <Project>{F93ACC41-44C2-4528-B387-58AD345ABF19}</Project>
+      <Name>CelParser</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DatabaseModels\DatabaseModels.csproj">
       <Project>{010D9C41-5B64-4861-B909-E42855976E9E}</Project>
       <Name>DatabaseModels</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{F44EDBA0-B5C4-4656-B215-37632E705754}</Project>
+      <Name>Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\Logger\Logger.csproj">
       <Project>{B59B462B-E0FC-4617-A2C2-420D56DA6409}</Project>
@@ -62,6 +69,10 @@
     <ProjectReference Include="..\MiscUtilities\MiscUtilities.csproj">
       <Project>{117E7D0A-621A-4F92-9F71-74FA64144AC9}</Project>
       <Name>MiscUtilities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PcGarageParser\PcGarageParser.csproj">
+      <Project>{9A4E87FF-48E7-4ADE-848E-339C1359275A}</Project>
+      <Name>PcGarageParser</Name>
     </ProjectReference>
     <ProjectReference Include="..\UtilitiesModels\UtilitiesModels.csproj">
       <Project>{12FC29D1-B1C2-46B2-8695-F1E50DA34DBB}</Project>
