removed extra keys

--- a/ProductEngine/DatabaseModels/DatabaseModels.csproj
+++ b/ProductEngine/DatabaseModels/DatabaseModels.csproj
@@ -81,6 +81,10 @@
     <Compile Include="Migrations\201901201012064_invalid-flag-for-product-follow.Designer.cs">
       <DependentUpon>201901201012064_invalid-flag-for-product-follow.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901272314089_remove-keys-from-product-follow.cs" />
+    <Compile Include="Migrations\201901272314089_remove-keys-from-product-follow.Designer.cs">
+      <DependentUpon>201901272314089_remove-keys-from-product-follow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Produs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -124,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901201012064_invalid-flag-for-product-follow.resx">
       <DependentUpon>201901201012064_invalid-flag-for-product-follow.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901272314089_remove-keys-from-product-follow.resx">
+      <DependentUpon>201901272314089_remove-keys-from-product-follow.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
